--- a/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
+++ b/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
@@ -296,7 +296,7 @@
                                                                                                     </Style>
                                                                                                 </ListBox.Resources>
 
-                                                                                                <ListBoxItem>
+                                                                                               <ListBoxItem>
                                                                                                     <materialDesign:PackIcon  Kind="Comment" VerticalAlignment="Center" Margin="8 4 4 4"/>
                                                                                                 </ListBoxItem>
                                                                                                 <ListBoxItem>
@@ -362,12 +362,17 @@
                                                                                 
                                                                                
                                                                             </ListBox>
-                                                                            <TextBox Grid.Row="1" Grid.ColumnSpan="2" x:Name="WriteCommenatryOrNoteTextBox" TextWrapping="Wrap" VerticalAlignment="Stretch" MinHeight="48" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" SpellCheck.IsEnabled="True" materialDesign:HintAssist.Hint="Write note or task item" materialDesign:HintAssist.IsFloating="True" 
+                                                                            <TextBox Grid.Row="1" Grid.ColumnSpan="2" x:Name="WriteCommenatryOrNoteTextBox" TextWrapping="Wrap" VerticalAlignment="Stretch" MinHeight="48" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" SpellCheck.IsEnabled="True" 
+                                                                                     materialDesign:HintAssist.Hint="{Binding}" 
+                                                                                     materialDesign:HintAssist.IsFloating="True" 
                                                                                      Text="{Binding InputNextComment.Value.InputCommentary.Value}"
                                                                      Padding="16 0 8 0" />
+                                                                            <!---->
                                                                             <StackPanel  Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.Column="3"  Orientation="Horizontal" Margin="8">
                                                                                 <Button Style="{StaticResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0" materialDesign:RippleAssist.IsCentered="True"
-                                                                                        Command="{Binding AddCommentCommand}">
+                                                                                        Command="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListView}}, Path=DataContext.AddCommentCommand}" 
+                                                                                        
+                                                                                        >
                                                                                     <materialDesign:PackIcon Kind="Send" />
                                                                                 </Button>
                                                                             </StackPanel>
